Fix profile image layout on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -652,7 +652,7 @@ ul.banner li img {
     }
 
     #hero .wrapper .photographer {
-        /* display: none */
+        align-self: center;
     }
 }
 
